--- a/PIM_/PIM_/PIM_.csproj
+++ b/PIM_/PIM_/PIM_.csproj
@@ -5,15 +5,26 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Content\" />
-    <Folder Include="wwwroot\image\" />
+    <Content Remove="wwwroot\css\checkin.css" />
+    <Content Remove="wwwroot\css\quartos.css" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Content\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\css\checkin.css" />
+    <None Include="wwwroot\css\quartos.css" />
     <None Include="wwwroot\css\cadastro.css" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.20" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.20">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
   </ItemGroup>
 
