--- a/PIM_/PIM_/PIM_.csproj
+++ b/PIM_/PIM_/PIM_.csproj
@@ -6,15 +6,15 @@
 
   <ItemGroup>
     <Content Remove="wwwroot\css\checkin.css" />
+    <Content Remove="wwwroot\css\detalhesquarto.css" />
+    <Content Remove="wwwroot\css\minhapagina.css" />
     <Content Remove="wwwroot\css\quartos.css" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Content\" />
-    <Folder Include="Controllers\" />
     <Folder Include="Data\" />
     <Folder Include="Views\Shared\" />
-    <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\js\" />
     <Folder Include="wwwroot\lib\bootstrap\" />
@@ -27,6 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\css\detalhesquarto.css" />
+    <None Include="wwwroot\css\minhapagina.css" />
     <None Include="wwwroot\css\checkin.css" />
     <None Include="wwwroot\css\quartos.css" />
     <None Include="wwwroot\css\cadastro.css" />
